force-app/main/default/objects/Event_Budget__c/Event_Budget__c.object-meta.xml
<CustomObject>
    <description>Event Budget Object For Campaigns</description>
    <label>Event Budget</label>
    <nameField>
        <label>Event Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>