force-app/main/default/objects/Event_Budget__c/fields/Actual_Expenditure_Balance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenditure_Balance__c</fullName>
    <description>A DLRS Roll-Up Updates This Field</description>
    <label>Actual Final Pmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>