force-app/main/default/objects/Event_Budget__c/fields/Actual_Expenditure_Balance_Month__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenditure_Balance_Month__c</fullName>
    <label>Actual Balance Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>