force-app/main/default/objects/Event_Budget__c/fields/Balance_Budget_v_Actual_v_Committed_F__c.field-meta.xml
<CustomField>
    <fullName>Balance_Budget_v_Actual_v_Committed_F__c</fullName>
    <description>filling version of the formula</description>
    <formula>DLRS_Budget_Amount_F__c  - ( DLRS_Commited_Final_Pmt_F__c  +  DLRS_Committed_Deposit_F__c  +  DLRS_Actual_Final_Pmt_Filling__c  +  DLRS_Actual_Deposit_Filling__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance (Budget v Actual v Committed)(F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>