force-app/main/default/objects/Event_Budget__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <description>A DLRS Roll-Up Updates This Field</description>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>