force-app/main/default/objects/Event_Budget__c/fields/Budget_Comments__c.field-meta.xml
<CustomField>
    <fullName>Budget_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>