force-app/main/default/objects/Event_Budget__c/fields/Budget_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_End_Date__c</fullName>
    <description>Date the Budget Ended</description>
    <label>Budget End Date</label>
    <type>Date</type>
</CustomField>