force-app/main/default/objects/Event_Budget__c/fields/Budget_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Start_Date__c</fullName>
    <description>Date The Budget Started</description>
    <label>Budget Start Date</label>
    <type>Date</type>
</CustomField>