force-app/main/default/objects/Event_Budget__c/fields/Budget_V_Actual_and_Committed__c.field-meta.xml
<CustomField>
    <fullName>Budget_V_Actual_and_Committed__c</fullName>
    <formula>Budget_Amount__c   -   (Committed_Expenditure_Balance__c   +  Committed_Expenditure_Deposit__c   +    Actual_Expenditure_Balance__c  +  Actual_Expenditure_Deposit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance (Budget v Actual v Committed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>