force-app/main/default/objects/Event_Budget__c/fields/Committed_Expenditure_Balance_Month__c.field-meta.xml
<CustomField>
    <fullName>Committed_Expenditure_Balance_Month__c</fullName>
    <inlineHelpText>Month the balance is expected to be paid</inlineHelpText>
    <label>Committed Balance Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>