force-app/main/default/objects/Event_Budget__c/fields/Committed_Expenditure_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Committed_Expenditure_Deposit__c</fullName>
    <description>A DLRS Roll-Up Updates This Field</description>
    <label>Committed Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>