force-app/main/default/objects/Event_Budget__c/fields/Committed_Expenditure_Deposit_Month__c.field-meta.xml
<CustomField>
    <fullName>Committed_Expenditure_Deposit_Month__c</fullName>
    <label>Committed Deposit Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>