force-app/main/default/objects/Event_Budget__c/fields/Customer_Entertainment_Budget__c.field-meta.xml
<CustomField>
    <fullName>Customer_Entertainment_Budget__c</fullName>
    <label>Customer Entertainment Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>