force-app/main/default/objects/Event_Budget__c/fields/DLRS_Actual_Deposit_Filling__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Actual_Deposit_Filling__c</fullName>
    <description>DLRS Rollup</description>
    <label>Actual Deposit (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>