force-app/main/default/objects/Event_Budget__c/fields/DLRS_Actual_Final_Pmt_Filling__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Actual_Final_Pmt_Filling__c</fullName>
    <description>Filling DLRS Field</description>
    <label>Actual Final Pmt (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>