force-app/main/default/objects/Event_Budget__c/fields/DLRS_Budget_Amount_F__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Budget_Amount_F__c</fullName>
    <label>Budget Amount (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>