force-app/main/default/objects/Event_Budget__c/fields/DLRS_Commited_Final_Pmt_F__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Commited_Final_Pmt_F__c</fullName>
    <description>DLRS Roll Up</description>
    <label>Commited Final Pmt (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>