force-app/main/default/objects/Event_Budget__c/fields/DLRS_Committed_Deposit_F__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Committed_Deposit_F__c</fullName>
    <description>DLRS roll up</description>
    <label>Committed Deposit (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>