force-app/main/default/objects/Event_Budget__c/fields/DLRS_Customer_Entertainment_Budget_F__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Customer_Entertainment_Budget_F__c</fullName>
    <description>DLRS Field for Filling</description>
    <label>Customer Entertainment Budget (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>