force-app/main/default/objects/Event_Budget__c/fields/DLRS_Marketing_Budget_F__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Marketing_Budget_F__c</fullName>
    <description>DLRS for Filling budgets</description>
    <label>Marketing Budget (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>