force-app/main/default/objects/Event_Budget__c/fields/DLRS_Sponsorship_Subscription_Budget_F__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Sponsorship_Subscription_Budget_F__c</fullName>
    <description>DLRS Rollup for filling</description>
    <label>Sponsorship Subscription Budget (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>