force-app/main/default/objects/Event_Budget__c/fields/DLRS_Trade_Event_Budget_F__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Trade_Event_Budget_F__c</fullName>
    <description>DLRS Filling roll up</description>
    <label>Trade Event Budget (F)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>