force-app/main/default/objects/Event_Budget__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Types Of Encirc Events</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SAP_Material_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Event_Type</valueSetName>
    </valueSet>
</CustomField>