force-app/main/default/objects/Event_Budget__c/fields/Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Details__c</fullName>
    <inlineHelpText>Number, Amount and Date</inlineHelpText>
    <label>Invoice Details</label>
    <type>TextArea</type>
</CustomField>