force-app/main/default/objects/Event_Budget__c/fields/Parent_Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Parent_Event_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Budget</description>
    <label>Parent Budget</label>
    <referenceTo>Event_Budget__c</referenceTo>
    <relationshipLabel>Event Budget</relationshipLabel>
    <relationshipName>Marketing_Event_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>