force-app/main/default/objects/Event_Budget__c/fields/Parent_Event_Filling__c.field-meta.xml
<CustomField>
    <fullName>Parent_Event_Filling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>event type filling</description>
    <label>Parent Budget (Filling)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Budget__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Event Budget Year</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Budget__c</referenceTo>
    <relationshipLabel>Event Budget (Parent Event (Filling))</relationshipLabel>
    <relationshipName>Event_Budget_Filling</relationshipName>
    <type>Lookup</type>
</CustomField>