force-app/main/default/objects/Event_Budget__c/fields/PO_No__c.field-meta.xml
<CustomField>
    <fullName>PO_No__c</fullName>
    <label>PO No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>