force-app/main/default/objects/Event_Budget__c/fields/PO_No_date_created__c.field-meta.xml
<CustomField>
    <fullName>PO_No_date_created__c</fullName>
    <label>PO No date created</label>
    <type>Date</type>
</CustomField>