force-app/main/default/objects/Event_Budget__c/fields/Pr_No__c.field-meta.xml
<CustomField>
    <fullName>Pr_No__c</fullName>
    <label>Pr No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>