force-app/main/default/objects/Event_Budget__c/fields/Pr_No_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Pr_No_Date_Created__c</fullName>
    <label>Pr No Date Created</label>
    <type>Date</type>
</CustomField>