force-app/main/default/objects/Event_Budget__c/fields/SAP_Entered__c.field-meta.xml
<CustomField>
    <fullName>SAP_Entered__c</fullName>
    <label>SAP Entered</label>
    <type>TextArea</type>
</CustomField>