force-app/main/default/objects/Event_Budget__c/fields/SAP_Material_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Sub_Group__c</fullName>
    <label>SAP Material Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Filling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>