force-app/main/default/objects/Event_Budget__c/fields/Sponsorship_Subscription_Budget__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Subscription_Budget__c</fullName>
    <label>Sponsorship Subscription Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>