force-app/main/default/objects/Event_Budget__c/fields/Trade_Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Trade_Event_Budget__c</fullName>
    <label>Trade Event Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>