force-app/main/default/objects/Event_Budget__c/fields/Vendor_number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_number__c</fullName>
    <description>&quot;Dependant on which supplier is picked
Clearpoint is 115396
Chester Races is 115601
Wembley is 116202
Etc.</description>
    <label>Vendor number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Supplier__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>115396</fullName>
            </value>
            <value>
                <fullName>115601</fullName>
            </value>
            <value>
                <fullName>116202</fullName>
            </value>
            <value>
                <fullName>114305</fullName>
            </value>
            <value>
                <fullName>114790</fullName>
            </value>
            <value>
                <fullName>116535</fullName>
            </value>
            <value>
                <fullName>114824</fullName>
            </value>
            <value>
                <fullName>116223</fullName>
            </value>
            <value>
                <fullName>117149</fullName>
            </value>
            <value>
                <fullName>201403</fullName>
            </value>
            <value>
                <fullName>201075</fullName>
            </value>
            <value>
                <fullName>113570</fullName>
            </value>
            <value>
                <fullName>118708</fullName>
                <isActive>false</isActive>
                <label>118708</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>