force-app/main/default/objects/Event_Budget__c/fields/Within_Budget__c.field-meta.xml
<CustomField>
    <fullName>Within_Budget__c</fullName>
    <description>A Red Flag Appears When The Actual And Committed Amounts Exceeds Budget Amount</description>
    <formula>IF(  (Actual_Expenditure_Balance__c +  Actual_Expenditure_Deposit__c +  Committed_Expenditure_Balance__c +  Committed_Expenditure_Deposit__c  )  &gt;  Budget_Amount__c  ,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 30, 30),
IF( Budget_Amount__c &gt; (Actual_Expenditure_Balance__c +  Actual_Expenditure_Deposit__c +  Committed_Expenditure_Balance__c +  Committed_Expenditure_Deposit__c  ) ,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 30, 30),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 30, 30)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A Red Flag Appears When The Actual And Committed Amounts Exceeds Budget Amount</inlineHelpText>
    <label>Within Budget?</label>
    <type>Text</type>
</CustomField>