force-app/main/default/objects/Event_Budget__c/fields/Within_Budget_F__c.field-meta.xml
<CustomField>
    <fullName>Within_Budget_F__c</fullName>
    <description>flags for budget filling</description>
    <formula>IF( (DLRS_Actual_Final_Pmt_Filling__c + DLRS_Actual_Deposit_Filling__c + DLRS_Commited_Final_Pmt_F__c + DLRS_Committed_Deposit_F__c ) &gt; DLRS_Actual_Deposit_Filling__c ,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 30, 30),
IF( DLRS_Actual_Deposit_Filling__c &gt; (DLRS_Actual_Final_Pmt_Filling__c  + DLRS_Actual_Deposit_Filling__c + DLRS_Commited_Final_Pmt_F__c + DLRS_Committed_Deposit_F__c ) ,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 30, 30),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 30, 30)
))</formula>
    <label>Within? Budget (F)</label>
    <type>Text</type>
</CustomField>