force-app/main/default/objects/Event_Budget__c/recordTypes/Event_Budget.recordType-meta.xml
<RecordType>
    <fullName>Event_Budget</fullName>
    <active>true</active>
    <label>Event Budget</label>
</RecordType>