force-app/main/default/objects/Event_Budget__c/recordTypes/Event_Budget_Year.recordType-meta.xml
<RecordType>
    <fullName>Event_Budget_Year</fullName>
    <active>true</active>
    <label>Event Budget Year</label>
</RecordType>