force-app/main/default/objects/Event_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Event_Budget__c</columns>
    <columns>Budget_Start_Date__c</columns>
    <columns>Budget_End_Date__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Actual_Expenditure_Balance__c</columns>
    <columns>Committed_Expenditure_Deposit__c</columns>
    <columns>Committed_Expenditure_Balance__c</columns>
    <columns>Budget_V_Actual_and_Committed__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>