force-app/main/default/objects/Event_Budget__c/listViews/Copy_of_2024_Customer_Events.listView-meta.xml
<ListView>
    <fullName>Copy_of_2024_Customer_Events</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Parent_Event_Budget__c</columns>
    <columns>Budget_Start_Date__c</columns>
    <columns>Budget_End_Date__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Customer_Entertainment_Budget__c</columns>
    <columns>Actual_Expenditure_Deposit__c</columns>
    <columns>Actual_Expenditure_Balance__c</columns>
    <columns>Committed_Expenditure_Deposit__c</columns>
    <columns>Committed_Expenditure_Balance__c</columns>
    <columns>Budget_V_Actual_and_Committed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>Budget_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2025</value>
    </filters>
    <filters>
        <field>SAP_Material_Group__c</field>
        <operation>equals</operation>
        <value>SD450 Customer Entertainment</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>2025 Budget</value>
    </filters>
    <label>2025 Customer Events</label>
    <sharedTo>
        <role>Encirc_UK_Sales_Director</role>
    </sharedTo>
</ListView>