force-app/main/default/objects/Event_Budget__c/listViews/X2025_Budget.listView-meta.xml
<ListView>
    <fullName>X2025_Budget</fullName>
    <columns>NAME</columns>
    <columns>SAP_Material_Group__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Committed_Expenditure_Deposit__c</columns>
    <columns>Committed_Expenditure_Balance__c</columns>
    <columns>Actual_Expenditure_Deposit__c</columns>
    <columns>Actual_Expenditure_Balance__c</columns>
    <columns>Budget_V_Actual_and_Committed__c</columns>
    <columns>Budget_Comments__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>Budget_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2025</value>
    </filters>
    <label>2025 Budget</label>
    <sharedTo>
        <role>Encirc_UK_Sales_Director</role>
    </sharedTo>
</ListView>