force-app/main/default/objects/Event_Budget__c/listViews/X2025_Filling_Budget.listView-meta.xml
<ListView>
    <fullName>X2025_Filling_Budget</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>SAP_Material_Group__c</columns>
    <columns>DLRS_Budget_Amount_F__c</columns>
    <columns>DLRS_Committed_Deposit_F__c</columns>
    <columns>DLRS_Commited_Final_Pmt_F__c</columns>
    <columns>DLRS_Actual_Deposit_Filling__c</columns>
    <columns>DLRS_Actual_Final_Pmt_Filling__c</columns>
    <columns>Balance_Budget_v_Actual_v_Committed_F__c</columns>
    <columns>Budget_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget_Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>Budget_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2025</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>2025 Filling</value>
    </filters>
    <filters>
        <field>Parent_Event_Filling__c</field>
        <operation>equals</operation>
        <value>2025 Filling</value>
    </filters>
    <label>2025 Filling Budget</label>
</ListView>